remove hello example endpoint
