# handler/endpoints.go
@@ -2,7 +2,6 @@ package handler
 
 import (
 	"errors"
-	"fmt"
 	"github.com/labstack/echo/v4"
 	"log"
 	"net/http"
@@ -11,12 +10,6 @@ import (
 	"swpr/repository"
 	"swpr/util"
 )
-
-func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
-	var resp generated.HelloResponse
-	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
-	return ctx.JSON(http.StatusOK, resp)
-}
 
 func (s *Server) Register(ctx echo.Context) (err error) {
 	req := new(generated.RegisterReq)
